# project-raindo

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.docker_config/: bashrc_extras.sh  finalize_init.sh
raindo/: cli.py  core.py  gee.py  plotter.py
