[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "raindo"
version = "0.0.1"
authors = [
  { name="Francisco Ramirez", email="ramirezfranciscof@gmail.com" },
]
description = "Gather rain datasets from CHIRPS-v2.0 and generates plots"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'rasterio ~= 1.2.10',
  'matplotlib ~= 3.5.2',
  'geopandas ~= 0.11.0',
  'click ~= 8.1.3',
  'requests ~= 2.28.0',
  'earthengine-api ~= 0.1.316'
  #'ipython ~= 8.4.0',
]

[project.scripts]
raindo = "raindo.cli:raindo"

